--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Michael Hilton's Website # the website title (if blank, full name will be used instead)
+title: Michael Hilton # the website title (if blank, full name will be used instead)
 first_name: Michael
 middle_name:
 last_name: Hilton
