--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,12 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-<<<<<<< HEAD
   To build a simiar page, see <a href="https://github.com/MichaelHilton/MichaelHilton.github.io">source on GitHub</a>
 url: # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
-=======
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
-icon: 🔥 # the emoji used as the favicon
-url:  # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
->>>>>>> 8fe464d30a610ba89219d8de32fc218c1bb713f6
+#icon: 🎓 # the emoji used as the favicon
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -55,15 +50,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-<<<<<<< HEAD
+
 github_username: michaelhilton # your GitHub user name
 twitter_username: michaelhilton # your Twitter handle
-=======
-github_username: # your GitHub user name
-gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
->>>>>>> 8fe464d30a610ba89219d8de32fc218c1bb713f6
-linkedin_username: # your LinkedIn user name
+
+linkedin_username: michael-hilton-0218b819 # your LinkedIn user name
 scholar_userid: g4Au-T0AAAAJ # your Google Scholar ID
 orcid_id: 0000-0001-9195-6902 # your ORCID ID
 medium_username: # your Medium username
@@ -71,7 +62,7 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: http://www.cs.cmu.edu/~mhilton/ # work page URL
+#work_url: http://www.cs.cmu.edu/~mhilton/ # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
@@ -180,15 +171,6 @@ scholar:
 # Optional Features
 # -----------------------------------------------------------------------------
 
-<<<<<<< HEAD
-enable_google_analytics:    false
-enable_panelbear_analytics: false
-enable_mansory:             true
-enable_math:                true
-enable_tooltips:            false
-enable_darkmode:            false
-show_social_icons:          false
-=======
 enable_google_analytics:    false  # enables google analytics
 enable_panelbear_analytics: false  # enables panelbear analytics
 enable_mansory:             true   # enables automatic project cards arangement
@@ -196,12 +178,11 @@ enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
-enable_navbar_social:       false  # enables displaying social links in the
+enable_navbar_social:       true  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
->>>>>>> 8fe464d30a610ba89219d8de32fc218c1bb713f6
 
 # -----------------------------------------------------------------------------
 # Library versions
